--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar-home">
+      <div class="container">
+        <figure class="navbar__logo">
+          <img
+            src="https://hotflix.volkovdesign.com/main/img/logo.svg"
+            alt="logo"
+          />
+        </figure>
+        <ul class="navbar__links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Catalog</a></li>
+          <li><a href="#">Pricing plan</a></li>
+          <li><a href="#">Pages</a></li>
+        </ul>
+        <div class="navbar__auth">
+          <input type="text" id="search" />
+          <a href="#">SignIn</a>
+          <span>/</span>
+          <a href="#">SignUp</a>
+        </div>
+      </div>
+    </nav>
+    <div class="bg"></div>
+  </body>
 </html>
