--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
   <body>
+    <div class="bg"></div>
     <nav class="navbar-home">
       <div class="container">
         <figure class="navbar__logo">
@@ -22,13 +30,43 @@
           <li><a href="#">Pages</a></li>
         </ul>
         <div class="navbar__auth">
-          <input type="text" id="search" />
+          <div class="search">
+            <input type="text" id="search-input" />
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
           <a href="#">SignIn</a>
           <span>/</span>
           <a href="#">SignUp</a>
         </div>
       </div>
     </nav>
-    <div class="bg"></div>
+    <main>
+      <h2>Movies</h2>
+      <section class="movies-container">
+        <div class="container">
+          <article class="movie">
+            <figure class="movie__image">
+              <img
+                src="https://plus.unsplash.com/premium_photo-1710961232986-36cead00da3c?q=80&w=1568&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="movie poster"
+              />
+            </figure>
+            <div class="overview">
+              <h3>overview</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                at eveniet nemo ex nostrum! Impedit vel expedita accusantium
+                error dolor rerum, corrupti nesciunt tempore nulla magni dolorum
+                unde necessitatibus deleniti.
+              </p>
+              <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="rating">8.7</span>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
