--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <li><a href="#">Pages</a></li>
         </ul>
         <div class="navbar__auth">
-          <div class="search">
+          <form class="search">
             <input type="text" id="search-input" />
             <i class="fa-solid fa-magnifying-glass"></i>
-          </div>
+          </form>
           <a href="#">SignIn</a>
           <span>/</span>
           <a href="#">SignUp</a>
@@ -68,5 +68,6 @@
         </div>
       </section>
     </main>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
