--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         </figure>
         <ul class="navbar__links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Catalog</a></li>
-          <li><a href="#">Pricing plan</a></li>
-          <li><a href="#">Pages</a></li>
+          <li><a href="#">Filter </a></li>
         </ul>
         <div class="navbar__auth">
           <form class="search">
@@ -41,33 +39,13 @@
       </div>
     </nav>
     <main>
-      <h2>Movies</h2>
+      <div class="container"></div>     
       <section class="movies-container">
-        <div class="container">
-          <article class="movie">
-            <figure class="movie__image">
-              <img
-                src="https://plus.unsplash.com/premium_photo-1710961232986-36cead00da3c?q=80&w=1568&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="movie poster"
-              />
-            </figure>
-            <div class="overview">
-              <h3>overview</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
-                at eveniet nemo ex nostrum! Impedit vel expedita accusantium
-                error dolor rerum, corrupti nesciunt tempore nulla magni dolorum
-                unde necessitatibus deleniti.
-              </p>
-              <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="rating">8.7</span>
-              </div>
-            </div>
-          </article>
-        </div>
+        
+        
       </section>
+      </div>
     </main>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js" type="module"></script>
   </body>
 </html>
