home Search update 1

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
             <input type="text" id="search-input" />
             <i class="fa-solid fa-magnifying-glass"></i>
           </form>
-          <a href="#">SignIn</a>
+          <a href="./assets/pages/login.html">LogIn</a>
           <span>/</span>
-          <a href="#">SignUp</a>
+          <a href="./assets/pages/signup.html">SignUp</a>
         </div>
       </div>
     </nav>
     <main>
       <div class="container"></div>     
-      <section class="movies-container">
-        
-        
-      </section>
+      <section class="movies-container"></section>
+      <div class="pages">
+        <a href="" class="fetch-previous">Previous Page</a>
+        <a href="" class="fetch-next">Next Page</a>
+      </div>
       </div>
     </main>
     <script src="./assets/js/main.js" type="module"></script>
