--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
@@ -27,10 +35,46 @@
           </ul>
           <div class="navbar__search_user">
             <input type="text" placeholder="Search..." id="search-input" />
-            <figure><img src="" alt="" /></figure>
+            <figure>
+              <img src="./assets/img/user.jpg" alt="boys series video" />
+            </figure>
+            <div class="search">
+              <a href="#" class="card">
+                <img src="./assets/img/the-boys.jpg" alt="card movie image" />
+                <div class="cont">
+                  <h3>The boys</h3>
+                  <p>
+                    action, 2021, <span>IMDB</span
+                    ><i class="fa-solid fa-star"> 9.6</i>
+                  </p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </nav>
+      <section class="content">
+        <h1 id="title">money Heist</h1>
+        <p>
+          When the national mint and a touring school group are held hostage by
+          robbers, police believe that the thieves have no way out. Little do
+          they know that the thieves have a bigger plan in store.
+        </p>
+        <div class="details">
+          <h6>A Netflix Original Film</h6>
+          <h5 id="gen">Thriller</h5>
+          <h4>2021</h4>
+          <h3 id="rate">
+            <span>IMDB</span><i class="fa-solid fa-star"> 9.6</i>
+          </h3>
+        </div>
+        <div class="btns">
+          <a href="#" id="play">Watch <i class="fa-solid fa-play"></i></a>
+          <a href="#" id="download"
+            ><i class="fa-solid fa-cloud-arrow-down"></i
+          ></a>
+        </div>
+      </section>
     </header>
   </body>
 </html>
