--- a/details.html
+++ b/details.html
@@ -7,20 +7,16 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <video src=""></video>
-      <div class="title">MOVIE DETAIL</div>
+    <div class="details container">
+      <h2 class="title">MOVIE DETAIL</h2>
       <div class="detail">
-        <div class="image">
+        <figure class="image">
           <img src="" alt="Movie Poster" />
-        </div>
+        </figure>
         <div class="content">
           <h1 class="name"></h1>
           <div class="rating"></div>
-          <div class="buttons">
-            <button>Watch Trailer</button>
-            <button>Add to Watchlist</button>
-          </div>
+
           <div class="overview"></div>
         </div>
       </div>
