--- a/details.html
+++ b/details.html
@@ -7,20 +7,49 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div class="details container">
-      <h2 class="title">MOVIE DETAIL</h2>
-      <div class="detail">
-        <figure class="image">
-          <img src="" alt="Movie Poster" />
+    <div class="bg"></div>
+    <nav class="navbar-home">
+      <div class="container">
+        <figure class="navbar__logo">
+          <img
+            src="https://hotflix.volkovdesign.com/main/img/logo.svg"
+            alt="logo"
+          />
         </figure>
-        <div class="content">
-          <h1 class="name"></h1>
-          <div class="rating"></div>
-
-          <div class="overview"></div>
+        <ul class="navbar__links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Filter </a></li>
+        </ul>
+        <div class="navbar__auth">
+          <form class="search">
+            <input type="text" id="search-input" />
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </form>
+          <div class="profile">
+            <a href="./assets/pages/login.html" class="login">LogIn</a>
+            <span>/</span>
+            <a href="./assets/pages/signup.html" class="signup">SignUp</a>
+          </div>
+          <a href="./assets/pages/signup.html" class="logout">Logout</a>
         </div>
       </div>
-    </div>
+    </nav>
+    <section class="details__section">
+      <div class="details container">
+        <h2 class="title">MOVIE DETAIL</h2>
+        <div class="detail">
+          <figure class="image">
+            <img src="" alt="Movie Poster" />
+          </figure>
+          <div class="content">
+            <h1 class="name"></h1>
+            <div class="rating"></div>
+
+            <div class="overview"></div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./assets/js/details.js" type="module"></script>
   </body>
