--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
       </div>
       </div>
     </main>
+    
+    <div class="chatbot__auth">
+       <div id="chatbot-icon">💬</div>
+    <div id="chatbot-container" class="hidden">
+      <div id="chatbot-header">
+        <span>Chatbot</span>
+        <button id="close-btn">&times;</button>
+      </div>
+      <div id="chatbot-body">
+        <div id="chatbot-messages"></div>
+      </div>
+      <div id="chatbot-input-container">
+        <input type="text" id="chatbot-input" placeholder="Type a message..." />
+        <button id="send-btn">Send</button>
+      </div>
+    </div>
+    </div>
+    <script src="./assets/js/chatbot.js" type="module"></script>
     <script src="./assets/js/main.js" type="module"></script>
   </body>
 </html>
