details page comments

--- a/details.html
+++ b/details.html
@@ -35,8 +35,8 @@
       </div>
     </nav>
     <section class="details__section">
-      <div class="details container">
-        <h2 class="title">MOVIE DETAIL</h2>
+      <div class="container">
+        <h2 class="title">Movie Details</h2>
         <div class="detail">
           <figure class="image">
             <img src="" alt="Movie Poster" />
@@ -50,7 +50,24 @@
         </div>
       </div>
     </section>
-
+    <section class="comments__section">
+      <div class="container">
+        <form>
+          <input
+            type="text"
+            placeholder="Please Leave us a comment"
+            id="input__comment"
+          />
+          <button type="button">Add a comment</button>
+        </form>
+        <ul class="comments">
+          <li>
+            <h5>Name</h5>
+            <p>Comment</p>
+          </li>
+        </ul>
+      </div>
+    </section>
     <script src="./assets/js/details.js" type="module"></script>
   </body>
 </html>
